<resources>
  <string name="app_name">AntiForensic Tools</string>
  <string name="enable_logs">Enable logging</string>
  <string name="select_day">Open logs for day</string>
  <string name="change_timeout">Change timeout</string>
  <string name="clear_logs">Clear logs</string>
  <string name="help">Help</string>
  <string name="log">Logs</string>
  <string name="delete">Delete</string>
  <string name="edit_text">Edit</string>
  <string name="show_more">Show more</string>
  <string name="file_photo_description">File icon</string>
  <string name="fab_text">Add file/folder</string>
  <string name="add_file">Add file</string>
  <string name="add_folder">Add folder</string>
  <string name="cancel">Cancel</string>
  <string name="ok">OK</string>
  <string name="theme">Select theme</string>
  <string name="enable_files_deletion">Enable deletion</string>
  <string name="maxpr">Priority: largest first</string>
  <string name="minpr">Priority: smallest first</string>
  <string name="alphabet">Alphabetical order</string>
  <string name="disalphabet">Reverse alphabetical order</string>
  <string name="sizebig">Size: largest first</string>
  <string name="sizesmall">Size: smallest first</string>
  <string name="change_password">Change password</string>
  <string name="clear">Clear list</string>
  <string name="settings">Settings</string>
  <string name="about">About app</string>
  <string name="file_deletion_settings">Files deletion settings</string>
  <string name="wrong_password">Wrong password</string>
  <string name="create_password">Setup password</string>
  <string name="enter_password">Enter password</string>
  <string name="app_entered">Someone entered app</string>
  <string name="priority">Priority: %1$d</string>
  <string name="empty_value_in_dialog">Empty value</string>
  <string name="number_out_of_range">Number out of range</string>
  <string name="short_password">Password too short</string>
  <string name="changePriority">Change file priority</string>
  <string name="file">File: %1$s</string>
  <string name="fileDetails"><![CDATA[<p>Name: %1$s</p><p>Priority: %2$s</p><p>Size: %3$s</p>]]></string>
  <string name="about_file_title">About file</string>
  <string name="apply">Confirm your action</string>
  <string name="want_to_clear">You want to clear all list of files</string>
  <string name="file_removal_unsuccessfull">File is not removed</string>
  <string name="folder_removal_unsuccessful">Folder not removed</string>
  <string name="long_help_files"><![CDATA[<p>You can select files which would be deleted after entering fake password here. In this menu you can choose only files which don\'t <strong>require root rights for deletion</strong>.</p>\n<p>To add new file or folder, tap button <strong>+.&nbsp;</strong></p>\n<p>You can delete file from list, clear list of files or edit file\'s priority. Files with higher priority (lower number of priority) are deleted first. Don\'t forget to enable files deletion by clicking on enable icon in top bar!</p>]]></string>
  <string name="select_date">Select day</string>
  <string name="disable_logs">Disable logging</string>
  <string name="clear_logs_question">Do you want to clear logs?</string>
  <string name="logs_clear_warning">Logs for day %1$s would be cleared.</string>
  <string name="logs_help">You can read logs here if they are enabled. You can find out when application was unlocked and what files were deleted. Logs are deleting automatically after 7 days, but you can change this behaviour.</string>
  <string name="enter_timeout_logs">Enter timeout for logs autodeletion (in days)</string>
  <string name="timeout_logs_long">Logs older than n days would be cleared to free space.</string>
  <string name="enable_logs_long"><![CDATA[Do you really want to enable logging? If adversary would get access to application password he can get data about deleted files. <strong>It is highly recommended to enable logs only for application testing.</strong>]]></string>
  <string name="about_long"><![CDATA[<p>Android AntiForensic Tools is a free and open-source app designed to protect your personal data from a powerful adversary who can put pressure on you and force you to unlock your device. It allows you to delete user profiles and personal files when a fake password is entered, a USB device connected or the wrong password is entered several times. An app provides additional options to protect your device from being researched by advanced adversaries: it can uninstall itself, run TRIM after data deletion to prevent deleted data recovery, disable logs before data deletion to leave no traces of it\'s actions and disable safe boot mode.</p><p>Read more on <a target="_blank" rel="noopener noreferrer" href="https://github.com/bakad3v/Android-AntiForensic-Tools">GitHub</a>.</p><p>You can support me with crypto</p><p>Monero: 88Z5fsVK6FP4oVNjo2BrHydAEa5Y1gTPi5d7BN68sjVDZ9dTn8wPb89WmUxrxf3T37bRGSR5dekkU9aQ7j8ErWcBJ2GZojC</p><p>LTC: ltc1qtfhun6yzt0qlpa9d6s8gr2yd70sg0kx755u3se</p><p>BTC: bc1qn9a9eyy2vgrz8yvhk0654d63dt56pxhpn6q4xl</p><p>BTC lightning: dualwhorl66@walletofsatoshi.com</p><p>Special thanks to:</p><p>x13a, the developer of the Wasted app which inspired me to create this app.</p><p>iamr0s, the developer of the Dhizuku application. &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;</p><p>BinTianqi, the developer of the Owndroid app, who wrote the code for connecting to the Dhizuku service.</p>]]></string>
  <string name="entertext">Enter text here</string>
  <string name="disable_files_deletion">Disable deletion</string>
  <string name="system_theme">System theme</string>
  <string name="dark_theme">Dark theme</string>
  <string name="light_theme">Light theme</string>
  <string name="enable_deletion_long"><![CDATA[<p>If you activate triggers, selected files would be deleted.</p>\n<p><strong>Important: files deletion doesn\'t work in BFU mode. If you enter duress password in BFU mode, files deletion will be launched after phone unlocking. If you set up app to destroy itself, it will destroy itself only when all files will be deleted. That\'s why it\'s recommended to avoid using this mode and delete profile with your secret files instead if you can grant app enough privileges.</strong></p>]]></string>
  <string name="settings_faq"><![CDATA[<p>You can change user settings here.</p><p><strong>Some settings depend on your threat model!</strong></p><p>• If you think that you may be targeted by hackers, or you think you won\'t be in trouble if your adversary finds out that your app deleted your data, avoid granting root rights to this application, because root makes your device <a target="_blank" rel="noopener noreferrer" href="https://madaidans-insecurities.github.io/android.html#rooting">less safe</a> against some exploits. Without root, the possibilities of an app would be limited, though some advanced functions are available with Dhizuku. You can set up an app to wipe the whole device, or to delete some user data and hide itself from the launcher.</p><p>• If, alternatively, you are only wary of having your device searched and in your situation an obvious deletion of data from your device could put you in danger, then grant the app root privileges. In that case, I advise you to set up deletion of your secondary user profile and enable all possible options: stop logd, run TRIM, uninstall itself. The app will stop logd, delete your profile, start TRIM to make data unrecoverable and finally uninstall itself. Complete self-destruction may take several seconds, so try to not provide the correct password to an adversary too fast.</p><p><strong>Follow the tips listed below regardless of the threat model!&nbsp;</strong></p><p>• Use all triggers (duress password, USB connection, bruteforce, power button). Data destruction will start on activation of one of these triggers. Each of them protects you from different types of attacks.</p><p>• Disable safe boot mode or make this app a system app if you can. Safe boot mode may be used to circumvent the protection offered by this app. However, disabling safe boot mode may raise suspicions.</p><p>• If you set up this app to delete data in the specified user profile, disable UI for switching between users when you doesn\'t need it, because otherwise an adversary may use the pull-down settings menu to get a list of your profiles from the lockscreen.</p><p>• If you set up this app to delete data in the specified user profile, install this app in this user profile too and set up an app to wipe data on all triggers.</p><p>• Make sure the app is working and data deletion with app uninstallation doesn\'t take too long. You can use logs to do some tests. Test before use! Test after updating the app! If something is wrong, please create an issue on <a target="_blank" rel="noopener noreferrer" href="https://github.com/bakad3v/Android-AntiForensic-Tools">GitHub</a> and show logs. You can also find detailed description of all apps functions on GitHub.</p>]]></string>
  <string name="deletion_started">Files deletion started</string>
  <string name="actions_settings">Actions settings</string>
    <string name="run_trim">Run TRIM</string>
  <string name="wipe_data">Wipe data</string>
  <string name="remove_itself">Remove itself</string>
  <string name="root_only">Requires root</string>
  <string name="all_superusers">Requires any superuser</string>
  <string name="root_and_owner">Requires root or dhizuku</string>
  <string name="permissions">Permissions settings</string>
  <string name="admin_rights">Admin rights</string>
  <string name="device_owner">Dhizuku</string>
  <string name="root">Root rights</string>
  <string name="accessibility_service_required">Requires accessibility service</string>
  <string name="prevent_bruteforce">Prevent bruteforce</string>
  <string name="accessibility_service">Accessibility service</string>
  <string name="allowed_attempts">Allowed wrong attempts</string>
  <string name="admin_required">Requires admin rights</string>
  <string name="profiles">Profiles</string>
  <string name="refresh_profiles">Refresh profiles</string>
  <string name="add_profile">Add profile</string>
  <string name="enable_profile_deletion">Enable profile deletion</string>
    <string name="logd_settings">Logd status settings</string>
    <string name="logd_on_start">Stop on start</string>
  <string name="logd_on_boot">Stop on boot</string>
    <string name="root_recommended">Requires root or dhizuku, root recommended</string>
  <string name="root_or_dhizuku_api">Requires root or dhizuku, Android 9+</string>
  <string name="users_limit">Maximum number of users</string>
  <string name="multiuser_ui">Multiuser UI</string>
  <string name="multiuser_settings">Multiuser settings</string>
  <string name="safeboot_settings">Safe boot settings</string>
  <string name="ui_settings">UI settings</string>
  <string name="run_on_password">Run on duress password</string>
    <string name="switch_user_ui">User switcher UI</string>
  <string name="switch_user_permission">Switch user permission</string>
  <string name="root_only_android10">Requires root, Android 10+</string>
  <string name="root_and_owner_android9">Requires root or dhizuku, Android 9+</string>
  <string name="safe_boot_status">Safe boot status</string>
    <string name="root_command_settings">Root command settings</string>
    <string name="clear_itself">Clear itself</string>
  <string name="hide_app">Hide app</string>
  <string name="clear_data">Clear app\'s data</string>
  <string name="destroy_on_button">Run on button clicks</string>
  <string name="clicks_number">Number of clicks</string>
  <string name="latency_text">Clicks latency (ms)</string>
    <string name="when_usb_connected">When USB connected...</string>
  <string name="destroy_data">Destroy data</string>
    <string name="dangerous_settings">Dangerous settings</string>
  <string name="allow_screenshots">Allow screenshots</string>
  <string name="triggers_settings">Triggers settings</string>
</resources>