<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
  <item
      android:title="@string/settings"
      android:id="@+id/settingsFragment"
      android:icon="@drawable/ic_baseline_settings_24"
      android:orderInCategory="1"/>
  <item android:title="@string/profiles"
      android:id="@+id/profilesFragment"
      android:icon="@drawable/baseline_manage_accounts_24"
      android:orderInCategory="2"/>
  <item android:title="@string/root_command_settings"
      android:id="@+id/rootFragment"
      android:icon="@drawable/baseline_code_24"
      android:orderInCategory="3"/>
  <item android:title="@string/file_deletion_settings"
    android:id="@+id/setupFilesFragment"
    android:icon="@drawable/ic_baseline_folder_24_black"
    android:orderInCategory="4" />
  <item android:title="@string/log"
    android:id="@+id/logsFragment"
    android:icon="@drawable/ic_baseline_text_snippet_24"
    android:orderInCategory="5"/>
  <item android:title="@string/about"
    android:id="@+id/aboutFragment"
    android:icon="@drawable/ic_baseline_help_outline_24"
    android:orderInCategory="6"/>
</menu>
