<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <com.google.android.material.textview.MaterialTextView
            style="?attr/textAppearanceSubtitle1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/margin_normal"
            android:paddingTop="@dimen/margin_normal"
            android:paddingEnd="@dimen/margin_normal"
            android:text="@string/ui_settings"
            android:textStyle="bold">

        </com.google.android.material.textview.MaterialTextView>

        <com.android.aftools.presentation.views.SettingsItemMenuView
            android:id="@+id/theme_menu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:mainText="@string/theme">

        </com.android.aftools.presentation.views.SettingsItemMenuView>

        <com.android.aftools.presentation.views.SettingsItemSwitchView
            android:id="@+id/allow_screenshots"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:mainText="@string/allow_screenshots">
        </com.android.aftools.presentation.views.SettingsItemSwitchView>


        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </com.google.android.material.divider.MaterialDivider>

        <com.google.android.material.textview.MaterialTextView
            style="?attr/textAppearanceSubtitle1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/margin_normal"
            android:paddingTop="@dimen/margin_normal"
            android:paddingEnd="@dimen/margin_normal"
            android:text="@string/actions_settings"
            android:textStyle="bold">

        </com.google.android.material.textview.MaterialTextView>

        <com.android.aftools.presentation.views.SettingsItemSwitchView
            android:id="@+id/run_trim_item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:mainText="@string/run_trim"
            app:requirementsText="@string/root_only">
        </com.android.aftools.presentation.views.SettingsItemSwitchView>

        <com.android.aftools.presentation.views.SettingsItemSwitchView
            android:id="@+id/wipe_item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:mainText="@string/wipe_data"
            app:requirementsText="@string/all_superusers">

        </com.android.aftools.presentation.views.SettingsItemSwitchView>

        <com.android.aftools.presentation.views.SettingsItemSwitchView
            android:id="@+id/remove_itself_item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:mainText="@string/remove_itself"
            app:requirementsText="@string/root_recommended">

        </com.android.aftools.presentation.views.SettingsItemSwitchView>

        <com.android.aftools.presentation.views.SettingsItemSwitchView
            android:id="@+id/hide_app_item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:mainText="@string/hide_app"
            app:requirementsText="@string/root_or_dhizuku_api">

        </com.android.aftools.presentation.views.SettingsItemSwitchView>

        <com.android.aftools.presentation.views.SettingsItemSwitchView
            android:id="@+id/clear_itself_item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:mainText="@string/clear_itself"
            app:requirementsText="@string/root_and_owner">

        </com.android.aftools.presentation.views.SettingsItemSwitchView>

        <com.android.aftools.presentation.views.SettingsItemSwitchView
            android:id="@+id/clear_data_item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:mainText="@string/clear_data">

        </com.android.aftools.presentation.views.SettingsItemSwitchView>

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </com.google.android.material.divider.MaterialDivider>


        <com.google.android.material.textview.MaterialTextView
            style="?attr/textAppearanceSubtitle1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/margin_normal"
            android:paddingTop="@dimen/margin_normal"
            android:paddingEnd="@dimen/margin_normal"
            android:text="@string/permissions"
            android:textStyle="bold">

        </com.google.android.material.textview.MaterialTextView>

        <com.android.aftools.presentation.views.SettingsItemSwitchView
            android:id="@+id/admin_rights_item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:mainText="@string/admin_rights">
        </com.android.aftools.presentation.views.SettingsItemSwitchView>

        <com.android.aftools.presentation.views.SettingsItemSwitchView
            android:id="@+id/root_item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:mainText="@string/root">
        </com.android.aftools.presentation.views.SettingsItemSwitchView>

        <com.android.aftools.presentation.views.SettingsItemSwitchView
            android:id="@+id/dhizuku_item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:mainText="@string/device_owner">
        </com.android.aftools.presentation.views.SettingsItemSwitchView>

        <com.android.aftools.presentation.views.SettingsItemSwitchView
            android:id="@+id/accessibility_service_item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:mainText="@string/accessibility_service">
        </com.android.aftools.presentation.views.SettingsItemSwitchView>

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </com.google.android.material.divider.MaterialDivider>

        <com.google.android.material.textview.MaterialTextView
            style="?attr/textAppearanceSubtitle1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/margin_normal"
            android:paddingTop="@dimen/margin_normal"
            android:paddingEnd="@dimen/margin_normal"
            android:text="@string/triggers_settings"
            android:textStyle="bold">

        </com.google.android.material.textview.MaterialTextView>

        <com.android.aftools.presentation.views.SettingsItemSwitchView
            android:id="@+id/run_on_password_item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:mainText="@string/run_on_password"
            app:requirementsText="@string/accessibility_service_required">
        </com.android.aftools.presentation.views.SettingsItemSwitchView>

        <com.android.aftools.presentation.views.SettingsItemMenuView
            android:id="@+id/usb_menu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:mainText="@string/when_usb_connected"
            app:requirementsText="@string/accessibility_service_required">

        </com.android.aftools.presentation.views.SettingsItemMenuView>

        <com.android.aftools.presentation.views.SettingsItemSwitchView
            android:id="@+id/bruteforce_item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:mainText="@string/prevent_bruteforce"
            app:requirementsText="@string/admin_required">
        </com.android.aftools.presentation.views.SettingsItemSwitchView>

        <com.android.aftools.presentation.views.PlainTextSettingView
            android:id="@+id/allowed_attempts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:settingsItemText="@string/allowed_attempts">
        </com.android.aftools.presentation.views.PlainTextSettingView>

        <com.android.aftools.presentation.views.SettingsItemSwitchView
            android:id="@+id/power_button_item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:mainText="@string/destroy_on_button"
            app:requirementsText="@string/accessibility_service_required">
        </com.android.aftools.presentation.views.SettingsItemSwitchView>

        <com.android.aftools.presentation.views.PlainTextSettingView
            android:id="@+id/clicks_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:settingsItemText="@string/clicks_number">
        </com.android.aftools.presentation.views.PlainTextSettingView>

        <com.android.aftools.presentation.views.PlainTextSettingView
            android:id="@+id/latency"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:settingsItemText="@string/latency_text">
        </com.android.aftools.presentation.views.PlainTextSettingView>

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </com.google.android.material.divider.MaterialDivider>

        <com.google.android.material.textview.MaterialTextView
            style="?attr/textAppearanceSubtitle1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/margin_normal"
            android:paddingTop="@dimen/margin_normal"
            android:paddingEnd="@dimen/margin_normal"
            android:text="@string/logd_settings"
            android:textStyle="bold">

        </com.google.android.material.textview.MaterialTextView>

        <com.android.aftools.presentation.views.SettingsItemSwitchView
            android:id="@+id/logd_on_start_item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:mainText="@string/logd_on_start"
            app:requirementsText="@string/root_only">
        </com.android.aftools.presentation.views.SettingsItemSwitchView>

        <com.android.aftools.presentation.views.SettingsItemSwitchView
            android:id="@+id/logd_on_boot_item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:mainText="@string/logd_on_boot"
            app:requirementsText="@string/root_only">
        </com.android.aftools.presentation.views.SettingsItemSwitchView>

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </com.google.android.material.divider.MaterialDivider>


        <com.google.android.material.textview.MaterialTextView
            style="?attr/textAppearanceSubtitle1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/margin_normal"
            android:paddingTop="@dimen/margin_normal"
            android:paddingEnd="@dimen/margin_normal"
            android:text="@string/multiuser_settings"
            android:textStyle="bold">

        </com.google.android.material.textview.MaterialTextView>

        <com.android.aftools.presentation.views.SettingsItemImageView
            android:id="@+id/set_multiuser_ui"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:mainText="@string/multiuser_ui"
            app:requirementsText="@string/root_only">

        </com.android.aftools.presentation.views.SettingsItemImageView>

        <com.android.aftools.presentation.views.SettingsItemImageView
            android:id="@+id/set_user_switcher_ui"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:mainText="@string/switch_user_ui"
            app:requirementsText="@string/root_only_android10">

        </com.android.aftools.presentation.views.SettingsItemImageView>

        <com.android.aftools.presentation.views.SettingsItemImageView
            android:id="@+id/switch_user_permission"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:mainText="@string/switch_user_permission"
            app:requirementsText="@string/root_and_owner_android9">

        </com.android.aftools.presentation.views.SettingsItemImageView>

        <LinearLayout
            android:id="@+id/users_limit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:orientation="vertical"
            android:paddingBottom="@dimen/margin_normal">

            <com.google.android.material.textview.MaterialTextView
                style="?attr/textAppearanceTitleLarge"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/margin_normal"
                android:paddingTop="@dimen/margin_normal"
                android:paddingRight="@dimen/margin_normal"
                android:text="@string/users_limit">

            </com.google.android.material.textview.MaterialTextView>

            <com.google.android.material.textview.MaterialTextView
                style="?attr/textAppearanceLabelLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:paddingStart="@dimen/margin_normal"
                android:text="@string/root_only">

            </com.google.android.material.textview.MaterialTextView>
        </LinearLayout>

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </com.google.android.material.divider.MaterialDivider>


        <com.google.android.material.textview.MaterialTextView
            style="?attr/textAppearanceSubtitle1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/margin_normal"
            android:paddingTop="@dimen/margin_normal"
            android:paddingEnd="@dimen/margin_normal"
            android:text="@string/safeboot_settings"
            android:textStyle="bold">

        </com.google.android.material.textview.MaterialTextView>

        <com.android.aftools.presentation.views.SettingsItemImageView
            android:id="@+id/set_safe_boot"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:mainText="@string/safe_boot_status"
            app:requirementsText="@string/root_and_owner">

        </com.android.aftools.presentation.views.SettingsItemImageView>

        <com.google.android.material.textview.MaterialTextView
            style="?attr/textAppearanceSubtitle1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/margin_normal"
            android:paddingTop="@dimen/margin_normal"
            android:paddingEnd="@dimen/margin_normal"
            android:text="@string/dangerous_settings"
            android:textStyle="bold">

        </com.google.android.material.textview.MaterialTextView>

        <com.android.aftools.presentation.views.PlainTextSettingView
            android:id="@+id/destroy_data"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:settingsItemText="@string/destroy_data"
            app:settingsTextColor="?attr/colorError">
        </com.android.aftools.presentation.views.PlainTextSettingView>
    </LinearLayout>
</ScrollView>