<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto">
  <item
    android:id="@+id/logs_enabled"
    android:icon="@drawable/ic_baseline_play_arrow_24"
    app:showAsAction="ifRoom"
    android:title="@string/enable_logs"
    android:orderInCategory="1"/>
  <item
    android:id="@+id/calendar"
    android:icon="@drawable/ic_baseline_calendar_month_24"
    android:orderInCategory="2"
    android:title="@string/select_day"
    app:showAsAction="ifRoom" />
  <item
    android:id="@+id/log_timeout"
    android:icon="@drawable/ic_baseline_timer_24"
    android:orderInCategory="3"
    android:title="@string/change_timeout"
    app:showAsAction="ifRoom" />
  <item
    android:id="@+id/clear_logs"
    android:icon="@drawable/ic_baseline_delete_outline_24_red"
    android:orderInCategory="4"
    android:title="@string/clear_logs"
    app:showAsAction="ifRoom" />
  <item
    android:id="@+id/logs_help"
    android:icon="@drawable/ic_baseline_help_outline_24"
    android:orderInCategory="5"
    android:title="@string/help"
    app:showAsAction="ifRoom" />
</menu>
