<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:title="@string/enable_profile_deletion"
        android:id="@+id/enable"
        android:icon="@drawable/ic_baseline_play_arrow_24"
        app:showAsAction="ifRoom"
        android:orderInCategory="1"/>
    <item android:title="@string/refresh_profiles"
        android:id="@+id/refresh"
        android:icon="@drawable/baseline_refresh_24"
        app:showAsAction="ifRoom"
        android:orderInCategory="2"/>
    <item android:title="@string/add_profile"
        android:id="@+id/add_profile"
        android:icon="@drawable/baseline_manage_accounts_24"
        app:showAsAction="ifRoom"
        android:orderInCategory="3"/>
    <item android:title="@string/help"
        android:id="@+id/help"
        android:icon="@drawable/ic_baseline_help_outline_24"
        app:showAsAction="ifRoom"
        android:orderInCategory="4"/>
</menu>
